--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -38,7 +38,7 @@
     width: 100%;
     height: 100%;
     background-position: center;
-    background: cover;
+    background-size: cover;
   }
 
   .content {
